--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1"
@@ -28,7 +30,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@babel/runtime": "^7.4.5",
-    "@babel/runtime-corejs2": "^7.4.5",
-    "core-js": "^2.6.9"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
